# crosspoint-reader-jp

./: .gitignore  README.ja.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: file-formats.md
lib/EpdFont/: CjkUiFallback.h  EpdFont.cpp  EpdFont.h  EpdFontFamily.cpp  EpdFontFamily.h  cjk_ui_font_20.h
lib/EpdFont/builtinFonts/: cjk_ui_20.cpp  cjk_ui_20.h
lib/EpdFont/scripts/: generate_japanese_codepoints.py
lib/Epub/Epub/: ParsedText.cpp  ParsedText.h  Section.cpp  WordJoin.h
lib/Epub/Epub/blocks/: TextBlock.cpp  TextBlock.h
lib/Epub/Epub/parsers/: ChapterHtmlSlimParser.cpp  ChapterHtmlSlimParser.h  Utf8ClusterAssembler.cpp  Utf8ClusterAssembler.h
lib/GfxRenderer/: GfxRenderer.cpp  GfxRenderer.h  ITextMetrics.h
lib/I18n/translations/: japanese.yaml
lib/Utf8/: Utf8.h
scripts/: check_cjk_font_data.py  check_cjk_ui_font.py  convert_cjk_font_to_epdfontdata.py  extract_cjk_fork_reference.py  generate_cjk_ui_font.py
src/: main.cpp
test/: CMakeLists.txt
test/cjk_font_parity/: CMakeLists.txt  CjkFontParityTest.cpp  CjkFontSelfTest.cpp
test/cjk_ui_fallback/: CMakeLists.txt  CjkUiFontTest.cpp  EpdFontDispatchTest.cpp
test/differential_rounding/: CMakeLists.txt
test/font_boundary/: CMakeLists.txt  FontBoundaryTest.cpp
test/font_resolver/: CMakeLists.txt  FontMetricTest.cpp  FontResolverTest.cpp
test/parsed_text/: CMakeLists.txt  ParsedTextLayoutTest.cpp
test/parser_cluster/: CMakeLists.txt  ParserClusterTest.cpp
test/support/: FakeTextMetrics.h  Logging.h  pgmspace.h
test/utf8/: CMakeLists.txt  Utf8PredicatesTest.cpp
