# P4 synthesizer tests removed (CjkUiFallback machinery deleted in P5 Task 5).
# P5 coverage now lives in test/font_resolver/ (resolveGlyph + measurement) and
# test/cjk_font_parity/ (converted CJK font asset).
# This directory is kept so the parent add_subdirectory() stays valid; it builds no target.
